--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -2,26 +2,30 @@
 
 <!DOCTYPE html>
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-<script src="~/scripts/jquery-3.1.1.min.js"></script>
-<script src="~/scripts/angular.min.js"></script>
-<script src="~/scripts/bootstrap.min.js"></script>
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
 </head>
-<body ng-app="App" ng-controller="MainController">
+<body ng-app="myApp" ng-controller="MainController">
     <div>
         <div class="container">
-            <p>Dupa japa</p>
-            <ul>
-                <li ng-repeat="x in records">
-                    {{x}}
+          
+               <ul>
+                <li ng-repeat="x in names">
+                   doda {{x}}
                 </li>
             </ul>
         </div>
     
     </div>
+    <script src="~/scripts/angular.min.js"></script>
+    <script src="~/scripts/jquery-3.1.1.min.js"></script>
+    <script src="~/scripts/bootstrap.min.js"></script> 
+    <script src="~/scripts/App.js"></script>      
+    <script src="~/scripts/MainController.js"></script>
 </body>
+
 
 </html>
